--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.36.1",
+    "html2canvas": "^1.4.1",
     "next": "14.2.3",
     "openai": "4.52.0",
     "react": "18.3.1",
